--- a/src/css/full.scss
+++ b/src/css/full.scss
@@ -154,7 +154,7 @@
   font-size: 14px;
   margin: 0;
   outline: none;
-  padding: 5px 10px;
+  padding: 5px 30px 5px 10px;
   position: relative;
   width: 100%;
 }
@@ -175,6 +175,7 @@
 }
 
 .p-form-text {
+  -webkit-appearance: none;
   background: var(--bg-color);
   border: 1px solid #cacaca;
   border-radius: 5px;
@@ -198,6 +199,7 @@
 }
 
 textarea.p-form-text {
+  -webkit-appearance: none;
   height: 100px;
 }
 
